turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:14: error: type mismatch;
 found   : Unit
 required: Array[Array[Array[Int]]]
var rule:Array[Array[Array[Int]]] = init() // Change this
                                        ^